bitfields/tests/compile_error_cases/errors/bitfield_type_unexpected_end_of_input.rs
use bitfields::bitfield;

#[bitfield()]
pub struct Bitfield {
    a: u64,
}

#[bitfield]
pub struct Bitfield {
    a: u64,
}


fn main() {}
