bitfields/tests/compile_error_cases/errors/bitfield_type_unexpected_end_of_input.stderr
error: The bitfield must have an unsigned integer type as its first argument.
 --> tests/compile_error_cases/errors/bitfield_type_unexpected_end_of_input.rs:3:1
  |
3 | #[bitfield()]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)

error: The bitfield must have an unsigned integer type as its first argument.
 --> tests/compile_error_cases/errors/bitfield_type_unexpected_end_of_input.rs:8:1
  |
8 | #[bitfield]
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
